# asset-validator

./: .gitignore  LICENSE  README.md  asset-validator.happ.dist  conductor-config.yaml  develop.sh  flake.nix
happ/: .gitignore  Cargo.toml  README.md  asset-validator.happ.dist  package-lock.json  package.json  pnpm-lock.yaml
happ/dnas/asset_validator/workdir/: dna.yaml
happ/server/: .gitignore  env.sample  launch.js  package-lock.json  package.json  test.js  wattbike.html
happ/server/agent/: capsecret.ts  index.ts  server.ts
happ/server/user/: capsecret.ts  index.ts  server.ts  tokenproof.ts
happ/shared/: ObservationDetail.svelte  lib.ts
happ/shared/lib/: generation.ts  generations.ts  hc.ts  index.ts  utils.ts
happ/shared/types/: eth_user.ts  index.ts  validation_claims.ts
happ/tests/src/asset_validator/eth_user/: common.ts  (+2 more)
happ/ui/: package.json  pnpm-lock.yaml
happ/ui-agent/: env.sample  package.json  tsconfig.node.json  vite.config.ts
happ/ui-agent/src/: ActiveGeneration.svelte  App.svelte  Generate.svelte  Generations.svelte  Observations.svelte  Users.svelte  Welcome.svelte  lib.ts
happ/ui-dev/: package.json
happ/ui-dev/src/: App.svelte  Generators.svelte
happ/ui-user/: env.sample  getWs.ts  index.html  package.json
happ/ui-user/src/: ActiveGeneration.svelte  App.svelte  ClearStorage.svelte  Generate.svelte  LoginOrRegister.svelte  Register.svelte  Scan.svelte  Welcome.svelte  lib.ts
happ/ui-user/src/lib/: getWs.ts
happ/ui/src/: App.svelte  Observations.svelte  Scan.svelte  contexts.ts
happ/workdir/: happ.yaml  web-happ.yaml
(+101 files in other folders)
