[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.3.5"
hdk = "=0.2.5"
holochain_integrity_types = "=0.2.5"
serde = "=1.0.166"

[workspace.dependencies.validation_claims]
path = "dnas/asset_validator/zomes/coordinator/validation_claims"

[workspace.dependencies.validation_claims_integrity]
path = "dnas/asset_validator/zomes/integrity/validation_claims"
