[package]
name = "validation_claims"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "validation_claims"

[dependencies]
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }

validation_claims_integrity = { workspace = true } 
